--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sortable Table with Pagination</title>
+    <title>Doing Stuff With Data</title>
     
     <link rel="stylesheet" href="/styles/stylesheet.css" />
 </head>
 <body>
-    <h1>Sortable Table with Pagination</h1>
+    <div class="title"><h1>Doing Stuff With Data</h1>
+    <p>double click the column title to change to descending</p></div>
     
+
     <div>
       <label for="results-per-page">Results per Page:</label>
       <select id="results-per-page">
